--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./bin/www"
   },
-  "author": "",
+  "author": "dheerajprajapati0792@gmail.com",
   "license": "ISC",
-  "description": ""
+  "description": "Game App"
 }
